--- a/dresscode.html
+++ b/dresscode.html
@@ -73,11 +73,11 @@
                     <img src="images/Garcon3.jpeg" alt="">
                     <img src="images/Garcon4.jpeg" alt="">
                     <img src="images/Fille12.jpeg" alt="">
-                    <img src="images/Garcon6.jpeg" alt="">
+                    <img src="images/Fille22.jpeg" alt="">
                     <img src="images/Fille16.jpeg" alt="">
-                    <img src="images/Garcon8.jpeg" alt="">
+                    <img src="images/fille25.jpeg" alt="">
                     <img src="images/Fille20.jpeg" alt="">
-                    <img src="images/Fille23.jpeg" alt="">
+                    <img src="images/Garcon7.jpeg" alt="">
                 </div>
                 <div class="column-img">
                     <img src="images/Garcon1.jpeg" alt="">
@@ -100,10 +100,10 @@
                     <img src="images/Fille11.jpeg" alt="">
                     <img src="images/Garcon5.jpeg" alt="">
                     <img src="images/Fille15.jpeg" alt="">
-                    <img src="images/Garcon7.jpeg" alt="">
+                    <img src="images/fille23.jpeg" alt="">
                     <img src="images/Fille19.jpeg" alt="">
-                    <img src="images/Fille22.jpeg" alt="">
-                    <img src="images/Fille25.jpeg" alt="">
+                    <img src="images/Garcon6.jpeg" alt="">
+                    <img src="images/Garcon8.jpeg" alt="">
                 </div>
 
 
@@ -137,14 +137,14 @@
                     <img src="images/Fille17.jpeg" alt="">
                     <img src="images/Fille18.jpeg" alt="">
                     <img src="images/Fille21.jpeg" alt="">
-                    <img src="images/Fille24.jpeg" alt="">
+                    <img src="images/Garcon6.jpeg" alt="">
                 </div>
                 <div class="column-img">
-                    <img src="images/Garcon6.jpeg" alt="">
+                    <img src="images/Fille24.jpeg" alt="">
                     <img src="images/Fille16.jpeg" alt="">
-                    <img src="images/Garcon8.jpeg" alt="">
+                    <img src="images/Fille25.jpeg" alt="">
                     <img src="images/Fille20.jpeg" alt="">
-                    <img src="images/Fille23.jpeg" alt="">
+                    <img src="images/Garcon7.jpeg" alt="">
                     <img src="images/Fille2.jpeg" alt="">
                     <img src="images/Garcon2.jpeg" alt="">
                     <img src="images/Fille7.jpeg" alt="">
@@ -152,10 +152,10 @@
                     <img src="images/Fille11.jpeg" alt="">
                     <img src="images/Garcon5.jpeg" alt="">
                     <img src="images/Fille15.jpeg" alt="">
-                    <img src="images/Garcon7.jpeg" alt="">
+                    <img src="images/Fille23.jpeg" alt="">
                     <img src="images/Fille19.jpeg" alt="">
                     <img src="images/Fille22.jpeg" alt="">
-                    <img src="images/Fille25.jpeg" alt="">
+                    <img src="images/Garcon8.jpeg" alt="">
                 </div>
 
             </div>
