--- a/rsvp.html
+++ b/rsvp.html
@@ -85,8 +85,18 @@
                     <label for="">Merci de sélectionner votre réponse*</label>
                     <select name="Participation" id="" required>
                         <option value="" disabled selected hidden>-</option>
-                        <option value="Présent">- Aura le plaisir d’assister à la soirée Ocean Mysteries</option>
-                        <option value="Absent">- Ne pourra malheureusement pas participer à la soirée Ocean Mysteries</option>
+                        <option value="Présent">- Aura le plaisir d’assister à la soirée Ocean Mysteries.</option>
+                        <option value="Absent">- Ne pourra malheureusement pas participer à la soirée Ocean Mysteries.</option>
+                    </select>
+                </div>
+
+                <div class="col-1">
+                    <label for="">Quelles sont vos restrictions alimentaires ?*</label>
+                    <select name="Restrictions" id="" required>
+                        <option value="" disabled selected hidden>-</option>
+                        <option value="Pas de restrictions">- Je n'ai pas de restrictions alimentaires.</option>
+                        <option value="végétarien(ne)">- Je suis végétarien(ne).</option>
+                        <option value="allergies">- J'ai des allergies.</option>
                     </select>
                 </div>
         
