--- a/dresscode.html
+++ b/dresscode.html
@@ -75,7 +75,7 @@
                     <img src="images/Fille12.jpeg" alt="">
                     <img src="images/Fille22.jpeg" alt="">
                     <img src="images/Fille16.jpeg" alt="">
-                    <img src="images/fille25.jpeg" alt="">
+                    <img src="images/Fille25.jpeg" alt="">
                     <img src="images/Fille20.jpeg" alt="">
                     <img src="images/Garcon7.jpeg" alt="">
                 </div>
@@ -100,7 +100,7 @@
                     <img src="images/Fille11.jpeg" alt="">
                     <img src="images/Garcon5.jpeg" alt="">
                     <img src="images/Fille15.jpeg" alt="">
-                    <img src="images/fille23.jpeg" alt="">
+                    <img src="images/Fille23.jpeg" alt="">
                     <img src="images/Fille19.jpeg" alt="">
                     <img src="images/Garcon6.jpeg" alt="">
                     <img src="images/Garcon8.jpeg" alt="">
