--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
             <section class="mt-124 mb-124">
                 <h1>Ocean Mysteries</h1>
                 <h2>02 - 03 - 2024</h2>
+                <audio controls autoplay class="mt-32">
+                    <source src="images/Belleaire.mp3" type="audio/mp3">
+                    Votre navigateur ne prend pas en charge l'élément audio.
+                </audio>
             </section>
     
             <section id="information" class="mt-124">
@@ -95,7 +99,7 @@
                         <div class="card">
                             <img class="mb-20" src="images/carte.png" alt="Carte aux trésors">
                             <p class="title-card">Adresse</p>
-                            <p>Ferme de la Hagoulle Rue de Rèves 38, 1476 Genappe</p>
+                            <p>Ferme de la Hagoulle<br> Rue de Rèves 38, 1476 Genappe</p>
                         </div>
                     </a>
                     
@@ -109,7 +113,7 @@
                     <a class="col-2" href="mailto: oceanmysteriesevent@gmail.com">
                         <div class="card">
                             <img class="mb-20" src="images/email.png" alt="Étoile de mer">
-                            <p class="title-card"><mark>E</mark>-mer</p>
+                            <p class="title-card"><mark>E</mark>-mail</p>
                             <p>oceanmysteriesevent@gmail.com</p>
                         </div>
                     </a>
