--- a/dresscode.html
+++ b/dresscode.html
@@ -28,7 +28,7 @@
                         <a href="photo.html">Photos</a>
                     </li>
                     <li>
-                        <a href="remerciement.html">Remerciement</a>
+                        <a href="remerciement.html">Remerciements</a>
                     </li>
                 </ul>
             </div> 
@@ -48,7 +48,7 @@
                         <a href="photo.html">Photos</a>
                     </li>
                     <li>
-                        <a href="remerciement.html">Remerciement</a>
+                        <a href="remerciement.html">Remerciements</a>
                     </li>
                 </ul>
 
