--- a/photo.html
+++ b/photo.html
@@ -26,7 +26,7 @@
                     <a href="photo.html">Photos</a>
                 </li>
                 <li>
-                    <a href="remerciement.html">Remerciement</a>
+                    <a href="remerciement.html">Remerciements</a>
                 </li>
             </ul>
         </div> 
@@ -46,7 +46,7 @@
                     <a href="photo.html">Photos</a>
                 </li>
                 <li>
-                    <a href="remerciement.html">Remerciement</a>
+                    <a href="remerciement.html">Remerciements</a>
                 </li>
             </ul>
 
@@ -61,9 +61,9 @@
 
         <h3 class="mb-64">Cliquez-ci dessous pour<br> découvrir les photos de la soirée</h3>
 
-        <a href="" target="_blank">
+        <!-- <a href="" target="_blank">
             <img class="redirection-photo" src="images/wireframe.png" alt="">
-        </a>
+        </a> -->
             
     </section>
 
