--- a/remerciement.html
+++ b/remerciement.html
@@ -28,7 +28,7 @@
                         <a href="photo.html">Photos</a>
                     </li>
                     <li>
-                        <a href="remerciement.html">Remerciement</a>
+                        <a href="remerciement.html">Remerciements</a>
                     </li>
                 </ul>
             </div> 
@@ -48,7 +48,7 @@
                         <a href="photo.html">Photos</a>
                     </li>
                     <li>
-                        <a href="remerciement.html">Remerciement</a>
+                        <a href="remerciement.html">Remerciements</a>
                     </li>
                 </ul>
 
@@ -59,7 +59,7 @@
             </nav>
     
         <section class="mt-124" style="width: 100%;">
-            <h3 class="mb-64">Remerciement</h3>
+            <h3 class="mb-64">Remerciements</h3>
     
             <form id="remerciement" method="post" name="remerciement-form">
 
