--- a/rsvp.html
+++ b/rsvp.html
@@ -105,7 +105,7 @@
                     <textarea name="Message" id="" cols="30" rows="10"></textarea>
                 </div>
     
-                <button class="ml-auto">
+                <button class="ml-auto" id="submitBtn">
                     Envoyer
                 </button>
     
