--- a/remerciement.html
+++ b/remerciement.html
@@ -78,7 +78,7 @@
                     <textarea name="Message" id="" cols="30" rows="10" required></textarea>
                 </div>
     
-                <button class="ml-auto">
+                <button class="ml-auto" id="submitBtn">
                     Envoyer
                 </button>
             </form>
